--- a/uol-web-dev/marvel.html
+++ b/uol-web-dev/marvel.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans">
     <title>MarvelDC Theme Park</title>
   </head>
   <body>
