Adding 6maps div in main menu

--- a/uol-web-dev/index.html
+++ b/uol-web-dev/index.html
@@ -156,6 +156,34 @@
       </div>
     </div>
 
+  <div class="mapcontainer">
+      <a href="marvel.html">
+        <img class=" map-mm marvel-mapmm1" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap1">
+      </a>
+
+      <a href="marvel.html">
+        <img class="map-mm marvel-mapmm2" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap2">
+      </a>
+
+      <a href="marvel.html">
+        <img class="map-mm marvel-mapmm3" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap3">
+      </a>
+
+      <a href="dc.html">
+        <img class="map-mm dcmapmm" src="https://vignette.wikia.nocookie.net/9d9d3259-9de9-4200-bb71-26e8fab82789/scale-to-width-down/800" alt="dcmap1">
+      </a>
+
+      <a href="dc.html">
+        <img class="map-mm dcmapmm" src="https://vignette.wikia.nocookie.net/9d9d3259-9de9-4200-bb71-26e8fab82789/scale-to-width-down/800" alt="dcmap2">
+      </a>
+
+      <a href="dc.html">
+        <img class="map-mm dcmapmm" src="https://vignette.wikia.nocookie.net/9d9d3259-9de9-4200-bb71-26e8fab82789/scale-to-width-down/800" alt="dcmap3">
+      </a>
+  </div>
+
+
+
 
     <!-- FAQ -->
     <div class="container-faq">
@@ -200,3 +228,5 @@
 </body>
 
 </html>
+
+ 
