--- a/uol-web-dev/index.html
+++ b/uol-web-dev/index.html
@@ -18,40 +18,45 @@
      make any PR. -->
 
 <body>
-    <div class="container-navbar">
-        <div class="navbar" id="mynavbar">
-                <button onclick="activeNav()" class="navres-icon"><img src="https://img.icons8.com/ios-glyphs/30/000000/menu-rounded.png"/></button>
-            <!--themepark logo-->
-            <div class="themepark-logo"></div>
-            <!--links to marvel/dc pages-->
-            <ul>
-                <li><a class="navbar-page-link" href="#marvel.html">Marvel</a></li>
-                <li><a class="navbar-page-link" href="#dc.hmtl">DC</a></li>
-            </ul>
-            <button onclick="searchClose();activeSearch()" class="search-icon"><img id="searchicon-change" src="https://img.icons8.com/ios-glyphs/24/000000/search.png"/></button>
-        </div>
 
-        <div id="searchbar" class="search-open">
-            <form class="search-form">
-                    <input class="search-box" type="text" placeholder="Search.." name="search">
-                    <button class="search-box-icon" type="submit"><img src="https://img.icons8.com/ios-glyphs/24/000000/search.png"/></button>
-             </form>
-        </div>
 
-        <div id="navres" class="navres-open">
-            <ul>
-                <li><a class="navres-page-link" href="#marvel.html">Marvel</a></li>
-                <li><a class="navres-page-link" href="#dc.hmtl">DC</a></li>
-            </ul>
-        </div>
-    </div>
 
   <div class="container-page">
-      <!-- Banner -->
-      <div class="container-banner">
-          <img class="banner-image" src="https://images.unsplash.com/photo-1588497859490-85d1c17db96d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80" alt="comics">
-          <img class="banner-image"src="https://images.unsplash.com/photo-1587270613291-b5c7042fc104?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80" alt="comics">
+
+    <!-- Navbar -->
+    <div class="container-navbar">
+      <div class="navbar" id="mynavbar">
+        <button onclick="activeNav()" class="navres-icon"><img src="https://img.icons8.com/ios-glyphs/30/000000/menu-rounded.png" /></button>
+        <!--themepark logo-->
+        <div class="themepark-logo"></div>
+        <!--links to marvel/dc pages-->
+        <ul>
+          <li><a class="navbar-page-link" href="#marvel.html">Marvel</a></li>
+          <li><a class="navbar-page-link" href="#dc.html">DC</a></li>
+        </ul>
+        <button onclick="searchClose();activeSearch()" class="search-icon"><img id="searchicon-change" src="https://img.icons8.com/ios-glyphs/24/000000/search.png" /></button>
       </div>
+
+      <div id="searchbar" class="search-open">
+        <form class="search-form">
+          <input class="search-box" type="text" placeholder="Search.." name="search">
+          <button class="search-box-icon" type="submit"><img src="https://img.icons8.com/ios-glyphs/24/000000/search.png" /></button>
+        </form>
+      </div>
+
+      <div id="navres" class="navres-open">
+        <ul>
+          <li><a class="navres-page-link" href="marvel.html">Marvel</a></li>
+          <li><a class="navres-page-link" href="dc.html">DC</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Banner -->
+    <div class="container-banner">
+      <img class="banner-image" src="https://images.unsplash.com/photo-1588497859490-85d1c17db96d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80" alt="comics">
+      <img class="banner-image" src="https://images.unsplash.com/photo-1587270613291-b5c7042fc104?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80" alt="comics">
+    </div>
 
     <!-- Voting -->
     <div class="container-vote">
@@ -189,7 +194,6 @@
       </div>
     </div>
 
-
     <!-- FAQ -->
     <div class="container-faq">
       <h2>Frequently Asked Questions</h2>
@@ -218,16 +222,20 @@
           nisi ut aliquip ex ea commodo consequat..</p>
       </div>
     </div>
+
+    <!-- CTA -->
+    <div class="container-cta">
+      <h1>Can't find what you're looking for?</h1>
+      <!-- Wrapper Div -->
+      <div>
+        <button class="btn-cta">Send us an enquiry</button>
+      </div>
+    </div>
+
   </div>
 
   <!-- CTA -->
-  <div class="container-cta">
-    <h1>Can't find what you're looking for?</h1>
-    <!-- Wrapper Div -->
-    <div>
-      <button class="btn-cta">Send us an enquiry</button>
-    </div>
-  </div>
+
 
   <script src="script.js" charset="utf-8"></script>
 </body>
