--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
 <body>
 
-
-
   <div class="container-page">
 
     <!-- Navbar -->
@@ -194,6 +192,38 @@
       </div>
     </div>
 
+    <div class="mmapcontainer">
+      <p>
+        <a href="marvel.html">
+          <img class=" map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap1">
+        </a>
+      </p>
+      <p>
+        <a href="marvel.html">
+          <img class="map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap2">
+        </a>
+      </p>
+      <p>
+        <a href="marvel.html">
+          <img class="map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap3">
+        </a>
+      </p>
+      <p>
+        <a href="dc.html">
+          <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap1">
+        </a>
+      </p>
+      <p>
+        <a href="dc.html">
+          <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap2">
+        </a>
+      </p>
+      <p>
+        <a href="dc.html">
+          <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap3">
+        </a>
+      </p>
+    </div>
     <!-- FAQ -->
     <div class="container-faq">
       <h2>Frequently Asked Questions</h2>
@@ -235,7 +265,6 @@
   </div>
 
   <!-- CTA -->
-
 
   <script src="script.js" charset="utf-8"></script>
 </body>
