Fixing map bugs and merge conflicts
Total replacement of previous files

--- a/uol-web-dev/index.html
+++ b/uol-web-dev/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+main<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -193,6 +193,39 @@
         </div>
       </div>
     </div>
+
+    <div class="mmapcontainer">
+        <p>
+          <a href="marvel.html">
+            <img class=" map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap1">
+          </a>
+        </p>
+        <p>
+          <a href="marvel.html">
+            <img class="map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap2">
+          </a>
+        </p>
+        <p>
+          <a href="marvel.html">
+            <img class="map-mm marvelmapmm" src="https://www.picclickimg.com/d/l400/pict/401955416027_/Thor-Doujinshi-Comic-Book-Thor-x-Loki-My.jpg" alt="marvelmap3">
+          </a>
+        </p>
+        <p>
+          <a href="dc.html">
+            <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap1">
+          </a>
+        </p>
+        <p>
+          <a href="dc.html">
+            <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap2">
+          </a>
+        </p>
+        <p>
+          <a href="dc.html">
+            <img class="map-mm dcmapmm" src="https://images8.alphacoders.com/985/thumb-1920-985625.jpg" alt="dcmap3">
+          </a>
+        </p>
+      </div>
 
     <!-- FAQ -->
     <div class="container-faq">
