--- a/uol-web-dev.2/index.html
+++ b/uol-web-dev.2/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-<html lang="en">
 <head>
-    <meta charset="utf-8">
-    
-    <title>MarvelDC Theme Park</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MarvelDC Theme Park</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 
 <body>
      <!-- Tickets/Promo -->
