Refactoring code from Meng and uploading missing images

--- a/uol-web-dev/dc.html
+++ b/uol-web-dev/dc.html
@@ -44,6 +44,50 @@
       </div>
     </div>
 
+    <div class="container-dc">
+      <div class="container-dcmap">
+        <img class="dc-1 map-dc-1" alt="dc1" src="images/map_dc-zone-1.png" onclick="toggleVisibility('dc1descrip');">
+
+        <img class="dc-2 map-dc-2" alt="dc2" src="images/map_dc-zone-2.png" onclick="toggleVisibility('dc2descrip');">
+
+        <img class="dc-3 map-dc-3" alt="dc3" src="images/map_dc-zone-3.png" onclick="toggleVisibility('dc3descrip');">
+      </div>
+
+      <div class="descripcontainer">
+        <h2 class="dcheader">Welcome to the DC Site!!</h2>
+        <p class="dcheader">SHAZAM!! I'm so glad to see you here and I know you are nervous, but do not worry! We have superheroes to help you, food & drinks at the corner, and you can even dress up like your favorite heroes! Click on each attraction to find out more!</p>
+
+        <div id="dc1descrip" class="dcmapcontent">
+          <h2 class="supermanfly boxed">Superman Fly!</h2>
+          <h3 class="supermanflydescrip boxed">Superman is going to fly across the entire theme park and shower you with his laser beams!</h3>
+          <h3 class="riderequirements boxed">
+            Requirements:
+            <br>
+            Age - 13 and above
+            <br>
+            Height - 130cm and above
+          </h3>
+        </div>
+
+        <div id="dc2descrip" class="dcmapcontent">
+          <h2 class="gangfight boxed">Gang Fight!</h2>
+          <h3 class="gangfightdescrip boxed">Quick! Help support Batman and friends save the world from Evil Darkseid, your help is crucial in this battle!</h3>
+          <h3 class="riderequirements boxed">
+            Requirements:
+            <br>
+            Age - 13 and above
+            <br>
+            Height - 130cm and above
+          </h3>
+        </div>
+
+        <div id="dc3descrip" class="dcmapcontent">
+          <h2 class="dcbistro boxed">D.C Bistro</h2>
+          <h3 class="dcbistrodescrip boxed">The Flash has found ways to cook delicious food using his superhuman speed! Do you dare to come try out his cooking?</h3>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer>
       <!-- Footer -->
