--- a/uol-web-dev/index.html
+++ b/uol-web-dev/index.html
@@ -84,8 +84,8 @@
     <!-- Tickets/Promo -->
     <div class="container-ticket-promo">
       <div class="container-tab">
-        <button class="tablinks" onclick="showTickets()">Tickets</button>
-        <button class="tablinks" onclick="showPromos()">Promo</button>
+        <button class="tablinks" id="show-tickets">Tickets</button>
+        <button class="tablinks" id="show-promos">Promo</button>
       </div>
 
       <!-- Tickets -->
